--- a/projecteuler-hs-jp.cabal
+++ b/projecteuler-hs-jp.cabal
@@ -17,3 +17,9 @@ executable 001
   main-is:             001.lhs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+
+executable 003
+  hs-source-dirs:      src
+  main-is:             003.lhs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
