--- a/projecteuler-hs-jp.cabal
+++ b/projecteuler-hs-jp.cabal
@@ -23,3 +23,9 @@ executable 003
   main-is:             003.lhs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+
+executable 023
+  hs-source-dirs:      src
+  main-is:             023.lhs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
