--- a/projecteuler-hs-jp.cabal
+++ b/projecteuler-hs-jp.cabal
@@ -24,8 +24,20 @@ executable 003
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
 
-executable 023
+executable 023-step1
   hs-source-dirs:      src
-  main-is:             023.lhs
+  main-is:             023-step1.lhs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
+
+executable 023-step2
+  hs-source-dirs:      src
+  main-is:             023-step2.lhs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
+
+executable 023-step3
+  hs-source-dirs:      src
+  main-is:             023-step3.lhs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
