--- a/projecteuler-hs-jp.cabal
+++ b/projecteuler-hs-jp.cabal
@@ -56,3 +56,9 @@ executable 027-primes1
   build-depends:       base >= 4.7 && < 5
                      , containers
                      , unix
+
+executable 032
+  hs-source-dirs:      src
+  main-is:             032.lhs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
