--- a/projecteuler-hs-jp.cabal
+++ b/projecteuler-hs-jp.cabal
@@ -62,3 +62,9 @@ executable 032
   main-is:             032.lhs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+
+executable 038
+  hs-source-dirs:      src
+  main-is:             038.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
