--- a/projecteuler-hs-jp.cabal
+++ b/projecteuler-hs-jp.cabal
@@ -86,3 +86,9 @@ executable 043
   main-is:             043.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+
+executable 044
+  hs-source-dirs:      src
+  main-is:             044.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
