--- a/projecteuler-hs-jp.cabal
+++ b/projecteuler-hs-jp.cabal
@@ -116,3 +116,9 @@ executable 049
   main-is:             049.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5, containers
+
+executable 050
+  hs-source-dirs:      src
+  main-is:             050.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5, containers
