--- a/projecteuler-hs-jp.cabal
+++ b/projecteuler-hs-jp.cabal
@@ -122,3 +122,9 @@ executable 050
   main-is:             050.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5, containers
+
+executable 051
+  hs-source-dirs:      src
+  main-is:             051.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5, containers
