--- a/projecteuler-hs-jp.cabal
+++ b/projecteuler-hs-jp.cabal
@@ -128,3 +128,15 @@ executable 051
   main-is:             051.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5, containers
+
+executable 055
+  hs-source-dirs:      src
+  main-is:             055.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
+
+executable 057
+  hs-source-dirs:      src
+  main-is:             057.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
