--- a/projecteuler-hs-jp.cabal
+++ b/projecteuler-hs-jp.cabal
@@ -140,3 +140,15 @@ executable 057
   main-is:             057.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+
+executable 058
+  hs-source-dirs:      src
+  main-is:             058.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5, containers
+
+executable 058-improved
+  hs-source-dirs:      src
+  main-is:             058-improved.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5, random, containers
